# qtsearcher

./: CMakeLists.txt
application/: main.cpp
finder/: finder.h  prefix_function.h
indexer/: index.h  indexer.h
tests/: test_index.cpp
tests/gtest/: gtest_main.cc
ui/: MainWindow.h  MainWindow.ui
